# age_mcp_server

./: Makefile  README.md  pyproject.toml
Formula/: age-mcp-server.rb  age_mcp_server.rb
docs/: claude_desktop_config_sample.json
scripts/: generate_formula.py
src/age_mcp_server/: __init__.py
