[project]
name = "age-mcp-server"
version = "0.2.43"
description = "Apache AGE MCP Server"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [
    { name = "Rio Fujita", email = "rio_github@rio.st" },
]
dependencies = [
    "agefreighter>=1.0.33",
    "mcp>=1.26.0",
    "ply>=3.11",
    "psycopg[binary]>=3.3.3",
    "psycopg-pool>=3.3.0",
]

[project.urls]
Homepage = "https://github.com/rioriost/age-mcp-server"
Issues = "https://github.com/rioriost/age-mcp-server/issues"
Repository = "https://github.com/rioriost/age-mcp-server"

[project.scripts]
age-mcp-server = "age_mcp_server:main"

[project.optional-dependencies]
test = [
    "pytest>=9",
    "pytest-cov>=7",
]

[dependency-groups]
dev = [
    "build>=1.2.2",
    "twine>=6.1.0",
    "ruff>=0.12.0",
]

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
