[project]
name = "age_mcp_server"
version = "0.2.47"
description = "Apache AGE MCP Server"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [
    { name = "Rio Fujita", email = "rio_github@rio.st" },
]
dependencies = [
    "agefreighter>=1.0.33",
    "mcp>=1.26.0",
    "ply>=3.11",
    "psycopg>=3.3.3",
    "psycopg-pool>=3.3.0",
]

[project.urls]
Homepage = "https://github.com/rioriost/age_mcp_server"
Issues = "https://github.com/rioriost/age_mcp_server/issues"
Repository = "https://github.com/rioriost/age_mcp_server"

[project.scripts]
age_mcp_server = "age_mcp_server:main"

[project.optional-dependencies]
test = [
    "pytest>=9",
    "pytest-cov>=7",
]

[dependency-groups]
dev = [
    "build>=1.2.2",
    "twine>=6.1.0",
    "ruff>=0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/age_mcp_server"]

[tool.hatch.build.targets.sdist]
include = ["src/age_mcp_server", "README.md", "LICENSE"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
